--- a/pages/Product Key Mock/queries/Customers-compareConfigs.json
+++ b/pages/Product Key Mock/queries/Customers-compareConfigs.json
@@ -19,14 +19,10 @@
       "timeoutInMillisecond": 10000,
       "paginationType": "NONE",
       "encodeParamsToggle": true,
-      "body": "(configA, configB) => {\n  return configA.licenseCount === configB.licenseCount;\n}",
+      "body": "(configA, configB) => {\n  return configA.licenseCount === configB.licenseCount && _.xor(configA.features, configB.features).length === 0;\n}",
       "jsArguments": [
-        {
-          "name": "configA"
-        },
-        {
-          "name": "configB"
-        }
+        {},
+        {}
       ],
       "isAsync": false
     },
@@ -40,7 +36,7 @@
     "invalids": [],
     "messages": [],
     "jsonPathKeys": [
-      "(configA, configB) => {\n  return configA.licenseCount === configB.licenseCount;\n}"
+      "(configA, configB) => {\n  return configA.licenseCount === configB.licenseCount && _.xor(configA.features, configB.features).length === 0;\n}"
     ],
     "userSetOnLoad": false,
     "confirmBeforeExecute": false,
